--- a/selectionSort.html
+++ b/selectionSort.html
@@ -247,7 +247,7 @@
     }
     <b>if</b> (min!=i)
     {
-      Swap(&amp;array[min], &amp;array[i]);
+      swap(&amp;array[min], &amp;array[i]);
     }
   }
 }</code></pre>
