--- a/pointers.html
+++ b/pointers.html
@@ -16,11 +16,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-
   <!-- Java Script -->
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script type="text/javascript" src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
   <script type="text/javascript" src="js/code.js"></script>
 
@@ -28,18 +26,15 @@
 
 <body class="bg-four scrollbar scrollbar_style" id="the_main_id">
 
-  <section id="topPageIcon">
-
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
-    </span>
-
+  <section id="topPageIcon" class="content_icon">
+    <div id="change_when_close" type="button" onclick="openOrCloseNav(1)">
+      <span id="rx_icon" class="sidenav-icon rx_icon" type="button"></span>
+    </div>
   </section>
+  <section id="topPage"></section>
 
-  <section id="topPage">
-  </section>
-
-  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style ">
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -66,7 +61,7 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <section id="main" onclick="openOrCloseNav(0,0)">
+  <section id="main" onclick="openOrCloseNav(0)">
     <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">מצביעים</h1>
     <h3 class="head-right">למה צריך מצביע?</h3>
