--- a/variables.html
+++ b/variables.html
@@ -29,18 +29,16 @@
 
 <body class="bg-two scrollbar scrollbar_style" id="the_main_id">
 
-    <section id="topPageIcon">
-
-        <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
-        </span>
-
+    <section id="topPageIcon" class="content_icon">
+        <div id="change_when_close" type="button" onclick="openOrCloseNav(1)">
+            <span id="rx_icon" class="sidenav-icon rx_icon" type="button"></span>
+        </div>
     </section>
+    <section id="topPage"></section>
 
-    <section id="topPage">
-    </section>
 
     <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-        <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
         <a href="index.html">מי אנחנו?</a>
         <a href="firstProgram.html">התוכנית הראשונה</a>
         <a href="variables.html"><span class="colorcheck">משתנים</span></a>
@@ -68,7 +66,7 @@
         <a href="mergeSort.html">מיון מיזוג</a>
     </div>
 
-    <section id="main" onclick="openOrCloseNav(0,0)">
+    <section id="main" onclick="openOrCloseNav(0)">
         <h1 class="head-left">Let's learn C</h1>
         <h1 class="head-right">משתנים</h1>
 
