--- a/pointers.html
+++ b/pointers.html
@@ -148,7 +148,7 @@
   <b>int</b> number = 10;
   <b>int</b> *<i>ptr</i> = &amp;number;
   *<i>ptr</i> = *<i>ptr</i> + 5;
-  printf(<u>"%d"</u>,ptr)
+  printf(<u>"%d"</u>,ptr);
 }</code></pre>
         </figure>
       </div>
