--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <!-- Java Script -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-
   <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
   <script type="text/javascript" src="js/code.js"></script>
 </head>
@@ -90,11 +89,11 @@
         מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
         <br>
         <br>
-        <a href="mailto:lahavitsme0@gmail.com">לשליחת מייל ללהב</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@email.com" target="_blank">לשליחת מייל ללהב</a>
         <br>
-        <a href="mailto:ziv.h252@gmail.com">לשליחת מייל לזיו</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@email.com" target="_blank">לשליחת מייל לזיו</a>
         <br>
-        <a href="mailto:anzortorikashvili@gmail.com">לשליחת מייל לאנזור</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@email.com" target="_blank">לשליחת מייל לאנזור</a>
       </p>
     </div>
   </section>
