--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
         <br>
         <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@email.com" target="_blank">לשליחת מייל ללהב</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@gmail.com" target="_blank">לשליחת מייל ללהב</a>
         <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@email.com" target="_blank">לשליחת מייל לזיו</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@gmail.com" target="_blank">לשליחת מייל לזיו</a>
         <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@email.com" target="_blank">לשליחת מייל לאנזור</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@gmail.com" target="_blank">לשליחת מייל לאנזור</a>
       </p>
     </div>
   </section>
