--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 
 <head>
   <meta charset="UTF-8" />
@@ -15,16 +15,16 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-  <!-- Java Script -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-  <script type="text/javascript" src="js/code.js"></script>
+
 </head>
 
 <body class="bg-oneAndHalf scrollbar scrollbar_style" id="the_main_id">
-  <section id="topPageIcon" class="content_icon">
-    <div id="change_when_close" type="button" onclick="openOrCloseNav(1)">
+ <section id="topPageIcon" class="content_icon">
+    <div id="change_when_close" type="button" onclick="openOrCloseNav(1)" class="showMe">
       <span id="rx_icon" class="sidenav-icon rx_icon" type="button"></span>
+    </div>
+    <div id="fireFoxButton" onclick="openOrCloseNav(1)" class="HideMe">
+      <span><i class="fas fa-bars"></i></span>
     </div>
   </section>
   <section id="topPage"></section>
@@ -89,14 +89,23 @@
         מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
         <br>
         <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@gmail.com" target="_blank">לשליחת מייל ללהב</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@gmail.com" target="_blank">לשליחת מייל
+          ללהב</a>
         <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@gmail.com" target="_blank">לשליחת מייל לזיו</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@gmail.com" target="_blank">לשליחת מייל
+          לזיו</a>
         <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@gmail.com" target="_blank">לשליחת מייל לאנזור</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@gmail.com" target="_blank">לשליחת
+          מייל לאנזור</a>
       </p>
     </div>
   </section>
+  <!-- Java Script -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+  <script type="text/javascript" src="js/code.js"></script>
 </body>
+
+
 
 </html>
