--- a/twoDimArrays.html
+++ b/twoDimArrays.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
+
+
 
 <head>
   <meta charset="UTF-8" />
@@ -17,19 +19,18 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Java Script -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
-  <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-  <script type="text/javascript" src="js/code.js"></script>
 
 
 </head>
 
 <body class="bg scrollbar scrollbar_style" id="the_main_id">
-  <section id="topPageIcon" class="content_icon">
-    <div id="change_when_close" type="button" onclick="openOrCloseNav(1)">
+ <section id="topPageIcon" class="content_icon">
+    <div id="change_when_close" type="button" onclick="openOrCloseNav(1)" class="showMe">
       <span id="rx_icon" class="sidenav-icon rx_icon" type="button"></span>
+    </div>
+    <div id="fireFoxButton" onclick="openOrCloseNav(1)" class="HideMe">
+      <span><i class="fas fa-bars"></i></span>
     </div>
   </section>
   <section id="topPage"></section>
@@ -220,6 +221,12 @@
           </figure>
         </div>
     </section>
+  <!-- Java Script -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+  <script type="text/javascript" src="js/code.js"></script>
 </body>
+
+
 
 </html>
