--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Lets learn C: HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- CSS -->
   <!-- Bootstrap Scripts -->
@@ -19,7 +19,7 @@
 </head>
 
 <body class="bg-oneAndHalf scrollbar scrollbar_style" id="the_main_id">
- <section id="topPageIcon" class="content_icon">
+  <section id="topPageIcon" class="content_icon">
     <div id="change_when_close" type="button" onclick="openOrCloseNav(1)" class="showMe">
       <span id="rx_icon" class="sidenav-icon rx_icon" type="button"></span>
     </div>
@@ -66,14 +66,13 @@
       <p>
         שלושה סטודנטים למדעי המחשב במכון הטכנולוגי חולון – בעלי ציונים גבוהים בקורס "מבוא למדעי המחשב" ו "סדנה מתקדמת
         בתכנות".
-        <br>
-        להב הררי – הוגה הפרויקט, מתכנת.
-        <br>
-        זיו הוכמן – מתכנת.
-        <br>
-        אנזור טוריקאשווילי – מתכנת.
       </p>
     </div>
+
+
+
+
+
     <h3 class="head-right">הסיבה שבגללה החלטנו לעשות את הפרויקט הזה:</h3>
     <div class="First-Para">
       <p>
@@ -87,17 +86,39 @@
     <div class="First-Para">
       <p>
         מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
-        <br>
-        <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@gmail.com" target="_blank">לשליחת מייל
-          ללהב</a>
-        <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@gmail.com" target="_blank">לשליחת מייל
-          לזיו</a>
-        <br>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@gmail.com" target="_blank">לשליחת
-          מייל לאנזור</a>
+
       </p>
+    </div>
+    <div class="names First-Para">
+      <div class="row">
+        <div class="col-4">
+          <div class="para">
+            להב הררי<br>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lahavitsme0@gmail.com" target="_blank"><i
+                onmouseover="iconToggleSwitch(this)" onmouseout="iconToggleSwitch(this)" class="fa fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/lahav-harary-361a391ab/" target="_blank"><i
+                class="fa fa-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="para">
+            זיו הוכמן<br>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ziv.h252@gmail.com" target="_blank"><i
+                onmouseover="iconToggleSwitch(this)" onmouseout="iconToggleSwitch(this)" class="fa fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/ziv-hochman-663b45196/" target="_blank"><i
+                class="fa fa-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="para">
+            אנזור טוריקשוילי<br>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=anzortorikashvili@gmail.com" target="_blank"><i
+                onmouseover="iconToggleSwitch(this)" onmouseout="iconToggleSwitch(this)" class="fa fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/anzor-torikashvili-629b731b8/" target="_blank"><i
+                class="fa fa-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Java Script -->
@@ -107,5 +128,11 @@
 </body>
 
 
+
+<br>
+
+<br>
+
+</p>
 
 </html>
