--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
         </div>
       </div>
     </div>
+
+    <br>
+
+    <h3 class="head-right">שיעורים פרטיים:</h3>
+    <div class="First-Para">
+      <p> 
+        סטודנטים שנה א' במכון הטכנולוגי בחולון ? 
+
+        שואפים להגיע לציונים טובים ? 
+        <br>
+        אנו מעבירים שיעורים פרטיים בקורסים הבאים:
+        
+        <li class="lightBlueColor"><span dir="ltr" class="blackColor">מבוא למדעי המחשב</span></li>
+        <li class="lightBlueColor"><span dir="ltr" class="blackColor">מבוא למערכות מחשב</span></li>
+        <li class="lightBlueColor"><span dir="ltr" class="blackColor">סדנה מתקדמת בתכנות</span></li>
+      </p>
+
+      <p>
+        אפשרות לשיעורים אחד על אחד או בקבוצות קטנות (עד שלושה סטודנטים). 
+        <br>
+        לפרטים נוספים ויצירת קשר:
+        <br>
+        להב - 050-811-1051
+        <br>
+        זיו - 053-338-6629       
+      </p>
+
+    </div>
+
+
   </section>
   <!-- Java Script -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
