--- a/statments.html
+++ b/statments.html
@@ -96,16 +96,16 @@
           &lt; (קטן / גדול מ..).
         </li>
         <li>
-          &gt;= (קטן שווה / גדול שווה מ..).
+          =&gt; (קטן שווה / גדול שווה מ..).
         </li>
         <li>
-          &lt;= (קטן שווה / גדול שווה מ..).
+          =&lt; (קטן שווה / גדול שווה מ..).
         </li>
         <li>
           == (שווה).
         </li>
         <li>
-          != (שונה).
+          =! (שונה).
         </li>
       </ol>
     </div>
