--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta name="description" content=">Lets learn C" />
+  <meta name="title" property="og:title" content=">Lets learn C" />
+  <meta property="og:type" content="Website" />
+  <meta name="image" property="og:image" content="assest/C-logo.jpg" />
+  <meta name="description" property="og:description" content="Lets learn C" />
   <title>Lets learn C: HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
