--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content=">Lets learn C" />
   <meta name="title" property="og:title" content=">Lets learn C" />
   <meta property="og:type" content="Website" />
-  <meta name="image" property="og:image" content="assest/C-logo.jpg" />
+  <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50610892886_d101d1da83_b.jpg" />
   <meta name="description" property="og:description" content="Lets learn C" />
   <title>Lets learn C: HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
